# VixenMapsAPI

./: .gitignore  README.md  check_interval.py  docker-compose.yaml  example.env  manage.py  requirements.txt
City/: apps.py  models.py  serializers.py  urls.py  views.py
City/migrations/: 0001_initial.py  0002_alter_shop_house.py
Old_mediasoft_test/: asgi.py  settings.py  template.env  urls.py  wsgi.py
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/cities/: admin.py  models.py  repository.py  serializers.py  tests.py  urls.py  views.py
backend/app/cities/migrations/: 0001_initial.py
backend/app/core/: settings.py  urls.py
backend/app/shops/: admin.py  apps.py  filters.py  models.py  repositories.py  serializers.py  tests.py  urls.py  views.py
backend/app/shops/migrations/: 0001_initial.py
